# arm_ik_wbc_ros

./: CMakeLists.txt  README.md  package.xml
configs/: arm.yaml  vx300.yaml  vx300s.yaml
demos/: ik_wbc_arm_demo.py  ik_wbc_arm_static_demo.py
launch/: demo_launch.launch  interbotix_wbc.launch
models/arm/: dofarm.urdf
models/arm/dofarm/: arm.STL  arm.stl  base.STL  forearm.STL  forearm.stl  shoulder.STL  shoulder.stl  waist.STL  waist.stl  wrist.STL  wrist.stl  wrist2.STL  wrist2.stl
models/vx300/: vx300.urdf
models/vx300/vx300_meshes/: gripper_and_camera.stl  shoulder.stl
models/vx300s/: CMakeLists.txt  package.xml
models/vx300s/urdf/: vx300s.urdf
models/vx300s/vx300s_meshes/: newarm.stl
msg/: IkWbcIn.msg  IkWbcOut.msg
nodes/: ik_wbc_arm_demo_node.py  interbotix_ik_wbc_node.py
